# Zaisaku

./: .env.example  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  run.py
backend/scripts/: evaluate.py
backend/src/zaisaku/: __init__.py  config.py  models.py
backend/src/zaisaku/api/: app.py  dependencies.py
backend/src/zaisaku/api/routers/: documents.py  health.py  ingest.py  query.py
backend/src/zaisaku/generation/: llm.py  prompt.py
backend/src/zaisaku/ingestion/: chunker.py  embedder.py  loader.py
backend/src/zaisaku/retrieval/: reranker.py  store.py
backend/tests/: conftest.py
backend/tests/fixtures/: sample.html  sample.txt
backend/tests/integration/: test_api.py
backend/tests/unit/: test_chunker.py  test_config.py  test_embedder.py  test_llm.py  test_loader.py  test_prompt.py  test_reranker.py  test_store.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: ChatArea.vue  DocumentSidebar.vue  SourceBadge.vue
scripts/: _gen_pdf.py  setup.ps1  setup.sh
