[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zaisaku"
version = "0.1.0"
description = "RAG pipeline for financial documents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "PyMuPDF>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "ragas>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zaisaku"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "requires_embedder: needs sentence-transformers model available",
    "requires_reranker: needs cross-encoder model available",
    "requires_ollama: needs a running Ollama server",
    "requires_chromadb: needs a running ChromaDB server",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
